<resources>
    <string name="app_name">Messenger</string>
    <string name="need_a_new_account">Need a new account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="select_photo">Select Photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_message">New Message</string>
    <string name="sign_out">Sign Out</string>
    <string name="send_message">Send message</string>
</resources>